--- a/views/newFilm.ejs
+++ b/views/newFilm.ejs
@@ -35,8 +35,12 @@
                     <fieldset class="fieldset">
                         <label for="">Страна выпуска</label>
                         <select name="country" id="">
-                            <option value="">Казахстан</option>
-                            <option value="">США</option>
+                            <% countries.forEach(country=>{
+                                %>
+                                <option value="">
+                                    <%= country.name%>
+                                </option>
+                                <% }) %>
                         </select>
                     </fieldset>
                     <fieldset class="fieldset">
