--- a/public/styles/pages/profile.css
+++ b/public/styles/pages/profile.css
@@ -26,14 +26,15 @@
     font-weight: 600
 }
 
-.profile-info button {
+.profile-info a {
     padding: 7px 25px;
     border: none;
     border-radius: 15px;
     cursor: pointer;
     color: #fff;
     font-weight: 500;
-    font-size: 16px
+    font-size: 16px;
+    text-decoration: none;
 }
 
 .edit-btn {
