added admin logic

--- a/views/adminProfile.ejs
+++ b/views/adminProfile.ejs
@@ -12,9 +12,12 @@
             <div class="main">
                 <div class="categories">
                     <h3>Жанры</h3>
-                    <a href="">Драма</a>
-                    <a href="">Комедии</a>
-                    <a href="">Ужасы</a>
+                    <% genres.forEach(genre=>{
+                        %>
+                        <a href="">
+                            <%=genre.name%>
+                        </a>
+                        <% }) %>
                 </div>
                 <div class="main-content">
                     <h3>Профиль</h3>
@@ -23,14 +26,17 @@
                             <img src="/images/profile-img.png" alt="">
                         </div>
                         <div class="profile-info">
-                            <p><span>Полное имя: </span>Иля Ким</p>
-                            <p><span>E-mail: </span>ilyakm93@gmail.com</p>
-                            <button class="edit-btn">Редактировать профиль</button>
-                            <button class="logout-btn">Выход</button>
+                            <p><span>Полное имя: </span>
+                                <%=user.full_name%>
+                            </p>
+                            <p><span>E-mail: </span>
+                                <%=user.email%>
+                            </p>
+                            <a class="edit-btn">Редактировать профиль</a>
+                            <a href="/api/signout" class="logout-btn">Выход</a>
                         </div>
                     </div>
-
-                    <h3>Сохраненные фильмы</h3>
+                    <h3> Фильмы</h3>
                     <a href="/new" class="add-btn">Добавить фильм</a>
                     <div class="main-card">
                         <div class="card-left">
