--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,11 +26,13 @@
         </div>
     </div>
     <div class="head-buttons">
-        <% if(user._id){ %>
-            <a href="/profile/<%=user._id%>">Профиль</a>
-            <% } else { %>
-                <a href="/login">Войти</a>
-                <% } %>
+        <% if(user._id && user.isAdmin){ %>
+            <a href="/admin/<%=user._id%>">Профиль</a>
+            <% } else if (user._id && !user.isAdmin){ %>
+                <a href="/profile/<%=user._id%>">Профиль</a>
+                <% } else{ %>
+                    <a href="/login">Войти</a>
+                    <%} %>
 
     </div>
 </header>
