--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,9 +12,12 @@
             <div class="main">
                 <div class="categories">
                     <h3>Жанры</h3>
-                    <a href="">Драма</a>
-                    <a href="">Комедии</a>
-                    <a href="">Ужасы</a>
+                    <% genres.forEach((genre)=>{
+                        %>
+                        <a href="">
+                            <%=genre.name%>
+                        </a>
+                        <%}) %>
                 </div>
                 <div class="main-content">
                     <h3>Профиль</h3>
@@ -27,10 +30,13 @@
                                 <%=user.full_name%>
                             </p>
                             <p><span>E-mail: </span>
-                                <%=user.email%>>
+                                <%=user.email%>
                             </p>
-                            <a class="edit-btn">Редактировать профиль</a>
-                            <a href="/api/signout" class="logout-btn">Выход</a>
+                            <% if(loginUser.id==user.id){ %>
+                                <a class="edit-btn">Редактировать профиль</a>
+                                <a href="/api/signout" class="logout-btn">Выход</a>
+                                <% } %>
+
                         </div>
                     </div>
                     <h3>Сохраненные фильмы</h3>
