--- a/views/newFilm.ejs
+++ b/views/newFilm.ejs
@@ -10,11 +10,11 @@
     <%- include('partials/header.ejs')%>
         <div class="container">
             <div class="main">
-                <form action="" class="form">
+                <form action="/api/new" method="POST" class="form" enctype="multipart/form-data">
                     <h3>Новый фильм</h3>
                     <fieldset class="fieldset">
                         <label for="">Добавьте картинку фильма</label>
-                        <input type="file" name="filmImg">
+                        <input type="file" name="image">
                     </fieldset>
                     <fieldset class="fieldset">
                         <label for="">Название фильма на русском</label>
@@ -37,7 +37,7 @@
                         <select name="country" id="">
                             <% countries.forEach(country=>{
                                 %>
-                                <option value="">
+                                <option value="<%=country._id%>">
                                     <%= country.name%>
                                 </option>
                                 <% }) %>
@@ -48,7 +48,7 @@
                         <select name="genre" id="">
                             <% genres.forEach(genre=>{
                                 %>
-                                <option value="">
+                                <option value="<%=genre._id%>">
                                     <%= genre.name%>
                                 </option>
                                 <%})%>
