added film deletion

--- a/views/adminProfile.ejs
+++ b/views/adminProfile.ejs
@@ -70,7 +70,7 @@
                                     <a href="/edit/<%=item._id%>">
                                         Редактировать
                                     </a>
-                                    <a>
+                                    <a onclick="deleteFilm('<%=item._id%>','<%=item.author._id%>')">
                                         Удалить
                                     </a>
                                 </div>
@@ -83,6 +83,8 @@
                 </div>
             </div>
         </div>
+        <%- include('partials/scripts.ejs')%>
+
 </body>
 
 </html>
