--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@
                                 <div class="film-rate">
                                     <p>7.3</p>
                                 </div>
-                                <button class="film-btn">
+                                <button class="film-btn" onclick="saveToWatch('<%=item._id%>')">
                                     <img src="/images/icons/save.svg" alt="">
                                     Буду смотреть
                                 </button>
@@ -59,6 +59,7 @@
                 </div>
             </div>
         </div>
+        <%- include('partials/scripts.ejs')%>
 </body>
 
 </html>
