--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -40,30 +40,43 @@
                         </div>
                     </div>
                     <h3>Сохраненные фильмы</h3>
-                    <div class="main-card">
-                        <div class="card-left">
-                            <div class="film-img">
-                                <img src="/images/films/film1.webp" alt="">
+                    <%if(user.toWatch.length>0){
+                        user.toWatch.forEach(film=>{
+                        %>
+
+                        <div class="main-card">
+                            <div class="card-left">
+                                <div class="film-img">
+                                    <img src="<%=film.image%>" alt="">
+                                </div>
+                                <div class="film-info">
+                                    <a href="">
+                                        <%=film.titleRus%>
+                                    </a>
+                                    <a href="">
+                                        <%=film.titleEng%>, <%=film.year%>, <%=film.time%> мин
+                                    </a>
+                                    <a href="">
+                                        <%=film.country.name%>, <%=film.genre.name%>
+                                    </a>
+                                    <button class="film-btn">
+                                        <img src="/images/icons/play.svg" alt="">
+                                        Смотреть</button>
+                                </div>
                             </div>
-                            <div class="film-info">
-                                <a href="">Всё, везде и сразу</a>
-                                <a href="">Everything, everywhere, all at once, 2021, 139 мин</a>
-                                <a href="">США, фантастика</a>
+                            <div class="card-right">
+                                <div class="film-rate">
+                                    <p>7.3</p>
+                                </div>
                                 <button class="film-btn">
-                                    <img src="/images/icons/play.svg" alt="">
-                                    Смотреть</button>
+                                    <img src="/images/icons/saved.png" alt="">
+                                    Сохранено
+                                </button>
                             </div>
                         </div>
-                        <div class="card-right">
-                            <div class="film-rate">
-                                <p>7.3</p>
-                            </div>
-                            <button class="film-btn">
-                                <img src="/images/icons/save.svg" alt="">
-                                Буду смотреть
-                            </button>
-                        </div>
-                    </div>
+
+                        <% }) }%>
+
                 </div>
             </div>
         </div>
