--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,13 +30,13 @@
                                     <img src="<%=item.image%>" alt="">
                                 </div>
                                 <div class="film-info">
-                                    <a href="">
+                                    <a href="/detail/<%=item._id%>">
                                         <%=item.titleRus%>
                                     </a>
-                                    <a href="">
+                                    <a href="/detail/<%=item._id%>">
                                         <%=item.titleEng%>, <%=item.year%>, <%=item.time%> мин
                                     </a>
-                                    <a href="">
+                                    <a href="/detail/<%=item._id%>">
                                         <%=item.country.name%>, <%=item.genre.name%>
                                     </a>
                                     <button class="film-btn">
@@ -49,8 +49,8 @@
                                     <p>7.3</p>
                                 </div>
                                 <% if(user.toWatch && user.toWatch.includes(item._id)){ %>
-                                    <button class="film-btn" onclick="saveToWatch('<%=item._id%>')">
-                                        <img src="/images/icons/save.svg" alt="">
+                                    <button class="film-btn" onclick="deleteFromToWatch('<%=item._id%>')">
+                                        <img src="/images/icons/saved.png" alt="">
                                         Сохранено
                                     </button>
                                     <% }else{ %>
