--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -68,7 +68,7 @@
                                 <div class="film-rate">
                                     <p>7.3</p>
                                 </div>
-                                <button class="film-btn">
+                                <button class="film-btn" onclick="deleteFromToWatch('<%=film._id%>')">
                                     <img src="/images/icons/saved.png" alt="">
                                     Сохранено
                                 </button>
