--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -3,3 +3,4 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="/JS/deleteFilm.js"></script>
 <script src="/JS/saveFilm.js"></script>
+<script src="/JS/rateFilm.js"></script>
