--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
                     <h3>Жанры</h3>
                     <% genres.forEach(genre=>{
                         %>
-                        <a href="/<%= genre.key%>">
+                        <a href="?genre=<%= genre.key%>">
                             <%= genre.name%>
                         </a>
                         <% })%>
@@ -62,6 +62,22 @@
                             </div>
                         </div>
                         <% }) %>
+                            <div class="pages">
+                                <% 
+                                let localsString='' 
+                                if(locals.genre){ 
+                                    localsString=`genre=${locals.genre}&` 
+                                } 
+                                if(locals.search){
+                                    localsString=`search=${locals.search}&`
+                                }
+                                for(let i=0; i < pages; i++){ 
+                                    %>
+                                    <a href="?<%=localsString%>page=<%=i%>">
+                                        <%=i+1%>
+                                    </a>
+                                    <% } %>
+                            </div>
 
                 </div>
             </div>
