--- a/public/styles/components/comments.css
+++ b/public/styles/components/comments.css
@@ -11,6 +11,7 @@
 .comment-stars img {
     width: 30px;
     filter: grayscale(100%);
+    z-index: 0
 }
 
 .add-comment-form {
@@ -41,6 +42,24 @@
     margin: 10px 0
 }
 
-.comments p {
+.comments>p {
     margin-top: 20px
+}
+.active-star {
+    filter: grayscale(0%) !important
+}
+
+.comment{
+    margin:20px 0;
+    border: 1px solid #00000039;
+    border-raidus: 10px;
+    padding: 15px
+}
+
+.comment a{
+    text-decoration: none;
+}
+
+.comment p{
+    margin:15px 0
 }
