--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,6 +25,8 @@
                     </fieldset>
 
                     <p>У вас нет аккаунта? <a href="/register">Зарегистрироваться</a></p>
+                <p>Войти с помощью</p>
+                <a href="/api/auth/google">Google</a>
                 </form>
             </div>
         </div>
