--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -4,3 +4,4 @@
 <script src="/JS/deleteFilm.js"></script>
 <script src="/JS/saveFilm.js"></script>
 <script src="/JS/rateFilm.js"></script>
+<script src="/JS/serial.js"></script>
